src/webui/src/sass/_general-layout.scss
body { font-size: 62.5%; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; text-rendering: optimizeLegibility; font-family: $full; background-color: hsla(0,0,97,1); }
input { font-family: $slim; border: none; border-bottom: 1px solid $icon-half-black; background-color: transparent; padding: 0.3rem 0; font-size: 1.2rem; font-weight: 400; text-overflow: ellipsis; width: inherit;
  &:focus { border-bottom: 1px solid $blue; box-shadow: 0px 1px 0px $blue; outline: none; transition: all 0.3s ease-in-out; }
  &::placeholder { font-family: $full; letter-spacing: 0.2rem; font-weight: 500; }
  &.white { color: white; border-bottom: 1px solid rgba(255,255,255,0.5);
    &::placeholder { color: rgba(255,255,255,0.5); }
    &:focus { border-bottom: 1px solid white; box-shadow: 0px 1px 0px white; outline: none; transition: all 0.3s ease-in-out; }
  }
}
textarea { font-size: 1.2rem; font-family: $slim; line-height: 2rem; padding: 0; width: 100%; min-height: 2.6rem; max-height: 10rem; border: none; background-color: transparent; border-bottom: 1px solid $icon-half-black; border-radius: 0; outline: none; box-shadow: none; resize: vertical;
  &:focus { border-bottom: 1px solid $blue; box-shadow: 0px 1px 0px $blue; outline: none; transition: all 0.3s ease-in-out; }
  &::placeholder { font-family: $full; letter-spacing: 0.2rem; font-weight: 500; line-height: 2rem; color: $icon-half-black; }
}

.fixed-width-numbers { -webkit-font-feature-settings: 'tnum'; -moz-font-feature-settings: 'tnum'; -ms-font-feature-settings: 'tnum'; font-feature-settings: 'tnum'; }
.centered { display: flex; align-items: center; justify-content: center; height: 100%; }

button { font-family: $full !important; font-size: 1.2rem; font-weight: 500; line-height: 1.6rem; text-transform: uppercase; letter-spacing: 0.2rem; padding: 0.25rem 0.75rem; color: $button-black; border: 1px solid $half-black; background-color: Transparent; transition: all 0.3s ease-in-out; outline: none;
  b.plusmark { font-weight: 600; font-size: 1.3rem; }
  b.x-mark { font-weight: 400; font-size: 1.1rem; margin-right: 0.7rem; }
  &.ng-leave { transition: none; }
  &.ng-enter { animation: fade-in 0.6s; }
  &:disabled { opacity: 0.6 }
  &:focus { outline: none; }
  &:hover { box-shadow: 0px 0px 2px $button-black; background-color: $hover-black; }
  &.white, .checkable-white & { color: hsla(0,0,100,0.75); border-color: hsla(0,0,100,0.5);
    &:hover { background-color: hsla(0,0,100,0.1); }
  }
  &.full-color { color: hsla(0,0,100,0.9); }
  &.blue { background-color: $blue-button; &:hover { background-color: lighten($blue-button,10); } }
  &.green { background-color: $green-button; &:hover { background-color: lighten($green-button,10); } }
  &.yellow { background-color: $yellow-button; &:hover { background-color: lighten($yellow-button,10); } }
  &.red { background-color: $red-button; &:hover { background-color: lighten($red-button,10); } }
}

.container { width: auto; }
.app .content, .container { margin-left: 30.5rem; margin-right: 3.9rem; margin-top: 3.9vh; }
.app .search-area { margin-left: 42rem; }
.modal-content { background-color: Transparent; box-shadow: none; border-radius: 0px; border: 0; }
.modal-dialog { margin: 5vh 10vw; width: auto; }
.modal-lg { width: inherit; }
.modal-backdrop { bottom: 0; position: fixed; }
.interpretation-bar { margin: 3.9vh 0; display: flex; justify-content: flex-end;
  input { width: 20rem; }
  .left { margin-right: auto; }
  button ~ button, button ~ interpretation-button  { margin-left: 1.3rem; }
}
.no-alleles, .no-results { height: calc(100vh - 19rem); display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;
  h2 { font-size: 2rem; text-transform: uppercase; font-weight: 400; letter-spacing: 0.05rem; }
  h4 { font-size: 1.7rem; font-weight: 300; word-spacing: 0.1rem; }
}
.no-results { height: auto; }
.no-results h4 { font-size: 1.6rem; }
nav.skinny .crumb.ng-enter, nav.skinny .crumb.ng-leave { transition: none; }
nav.skinny { z-index: 99; padding: 1.3rem 3.9rem 1.3rem 2.6rem; display: flex; justify-content: space-between; align-items: center; background-color: $blue; color: white;
  .breadcrumbs { display: flex; align-items: center; }
  .crumb { margin-right: 2vw; color: hsla(0,0,100,0.5); cursor: pointer; display: flex; align-items: center; transition: color 0.3s ease-in-out;  }
  .crumb ~ .crumb:before { content: '▶'; font-size: 1.3rem; color: $icon-half-black !important; margin-right: 2vw; }
  .crumb.active, .crumb:hover { color: hsla(0,0,100,1); }
  .crumb.active { cursor: default; }
  .crumb.arrow { transform: rotate(-90deg); }
  p { font-size: 1.0rem; margin-bottom: 0.35rem; font-weight: 500; letter-spacing: 0.2rem; text-transform: uppercase; }
  h2, h3 ,h4, h5 { font-family: $slim; font-size: 1.3rem; font-weight: 600; margin: 0; text-transform: uppercase; }
  input.white { font-size: 1.2rem; width: 15vw; }
}
nav.skinny.collapsed { overflow: hidden; max-height: 2.6rem; position: fixed; top: 0; right: 0; left: 0;
  p { opacity: 0; position: absolute; }
  input { padding: 0.1rem 0; margin-bottom: 1px; font-size: 1rem; }
}
.search-results:before { content: "Search Results"; color: $half-black; font-size: 1.4rem; font-family: $full; font-weight: 500; text-transform: uppercase; position: absolute; left: -15rem; top: 3.5rem; }
.search-results:before.ng-enter {  animation: 1s fade-in; }
.search-results .ng-enter { animation: 1s fade-in; }
.search-results { padding: 2.6rem; background-color: $blue; color: white; font-size: 1.3rem; font-family: $slim; width: 50vw; margin-left: auto; position: relative;
  .analysis-row { margin-left: 2rem; }
  .section-title { font-weight: 400; font-size: 1.8rem; text-transform: uppercase; letter-spacing: 0.1rem; }
  .element-title { font-size: 1.6rem; font-weight: 600; }
  .close-results { position: absolute; right: 3.9rem; top: 0.7rem; }
  .close-results .fa { margin-right: 0.5rem; }
}


.sidebar .ng-enter { opacity: 0; transition: all 0.6s ease-in-out; }
.sidebar .ng-enter-active { opacity: 1; }
.sidebar .nav-row.ng-leave, .sidebar .nav-row .ng-leave { transition: none; }
.sidebar { z-index: 2; display: flex; flex-direction: column; justify-content: center; width: 24rem; position: fixed; top: 6rem; bottom: 0; min-height: 540px;
  a { color: inherit;  &:hover { text-decoration: none; } }
  p { font-size: 1.0rem; font-weight: 500; letter-spacing: 0.2rem; text-transform: uppercase; }
  h1 { font-size: 2.6rem; line-height: 2.6rem; font-weight: 600; width: auto; }
  h2 ,h4 { font-family: $slim; font-weight: 600; margin: 0; text-transform: uppercase; }
  h2 { font-size: 1.5rem; }
  h4 { font-size: 1.4rem; }
  .nav-row { display: flex; align-items: center; color: $half-black; background-color: inherit;
    & .tab, & .title { transition: all 0.3s ease-in-out; }
    &:hover { cursor: pointer; }
    &:hover .tab { background-color: $blue-sidebar; }
    &:hover .title { background-color: $hover-black; }
    &.active:hover { cursor: default; }
    &.active:hover .tab { background-color: $blue; }
    &.active:hover .title { background-color: inherit; color: $blue; }
  }
  .tab { width: 0.7rem; min-width: 0.7rem; height: 6rem; background-color: inherit; }
  .title { width: 100%; padding-left: 1.9rem; height: 6rem; line-height: 6rem; }
  .tab.active { background-color: $blue; }
  .title.active { color: $blue; }
  nav, .hero { margin-top: auto; }
  .hero { color: hsla(0,0,92,1); padding-left: 2.6rem; cursor: default; text-transform: uppercase; }
  .hero h1 { transition: all 0.6s ease-in-out; margin: 0; margin-bottom: 1.3rem; letter-spacing: 0.08rem; }
  .hero p { margin-bottom: 0.3rem; }
  .hero:hover h1 { color: $blue; }
  .hero .l { font-size: 3.1rem; letter-spacing: 0; }
}
.sidebar.login .hero { color: $blue; }

#toast-container { position: fixed; z-index: 999999; bottom: 0; right: 0; left: 0; width: 100%;
  & > :hover { cursor: pointer; }
  .toast { position: relative; overflow: hidden; padding: 1.3rem 3.9rem 1.3rem 2.6rem; width: 100vw; margin: 0 auto; background-position: 15px center; background-repeat: no-repeat; color: hsla; opacity: 0.99; }
  .toast { background-color: #030303; }
  .toast:before { color: white; font-size: 1.1rem; font-family: $full; letter-spacing: 0.1rem; }
  .toast-success { background-color: $green; &:before { content: "HOORAY"; } }
  .toast-error { background-color: $red; &:before { content: "ERROR"; } }
  .toast-info { background-color: $blue; &:before { content: "INFORMATION"; } }
  .toast-warning { background-color: $yellow; &:before { content: "WARNING"; } }
  .toast-message { word-wrap: break-word; font-size: 1.7rem; font-family: $slim; font-weight: 600; text-transform: uppercase; color: white; padding-top: 0.3rem; }
  .toast.ng-enter { max-height: 0px ; transition: all 0.6s ease-in-out; }
  .toast.ng-enter.ng-enter-active { max-height: 1000px; }
  .toast.ng-leave { max-height: 1000px; transition: all 0.6s ease-in-out; }
  .toast.ng-leave.ng-leave-active { max-height: 0px; }
}

// all initial styling from toastr, probably needs fixed
button.toast-close-button { padding: 0; cursor: pointer; background: transparent; border: 0; -webkit-appearance: none; }
.toast-title { font-weight: bold; }
.toast-message a, .toast-message label { color: #FFFFFF; }
.toast-message a:hover { color: #CCCCCC; text-decoration: none; }
.toast-close-button { position: relative; right: -0.3em; top: -0.3em; float: right; font-size: 20px; font-weight: bold; color: #FFFFFF; -webkit-text-shadow: 0 1px 0 #ffffff; text-shadow: 0 1px 0 #ffffff; opacity: 0.8; }
.toast-close-button:hover, .toast-close-button:focus { color: #000000; text-decoration: none; cursor: pointer; opacity: 0.4; }

